--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -3,9 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./get-in-touch.css" />
+    <title>UltraTidy - Get in Touch</title>
   </head>
+
   <body>
-    get in touch
+    <section class="get-in-touch">
+      <div>
+        <div class="stars-section">
+          <h1 class="header-color">
+            <i class="fa-solid fa-star"></i>
+            Get in Touch
+          </h1>
+        </div>
+        <p class="share-location">
+          We want to share our location to find us easily.
+        </p>
+      </div>
+      <div>
+        <img class="map-image" src="./images/googlemap.jpg" alt="" />
+      </div>
+      <div class="subscribe">
+        <p class="header-color">Send your Email to Subscribe our Team</p>
+        <div class="subscribe-input">
+          <input
+            type="email"
+            id="mail"
+            name="mail"
+            placeholder="Enter your email"
+          />
+          <i class="fa-solid fa-share"></i>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
