adding prices page with style

--- a/gallery.html
+++ b/gallery.html
@@ -387,6 +387,7 @@
       <span>UltraTidy Cleaning Services Gallery Page</span>
     </footer>
     <!-- end of footer -->
+    <script src="gallery.js"></script>
 </body>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
