update FAQ page

--- a/FAQs.html
+++ b/FAQs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="FAQ.css">
+    <link rel="stylesheet" href="FAQs.css">
     <title>Document</title>
 </head>
 <body>
@@ -36,8 +36,8 @@
         <div class="column">
             <br><br><br>
             <div class="parent">
-                <img class="image1" src="pictures/home cleaning.png" />
-                <img class="image2" src="pictures/cleaning image2.png" />
+                <img class="image1" src="home cleaning.png" />
+                <img class="image2" src="cleaning image2.png" />
               </div>
     </div>
     
