--- a/.vscode/testimonial.html
+++ b/.vscode/testimonial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="testimonial.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
@@ -18,7 +18,7 @@
             <div class="card">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                 ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                <img src="pictures/client1.png" alt="Client">
+                <img src="client1.png" alt="Client">
                 <br><br>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -34,7 +34,7 @@
             <div class="card">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                    <img src="pictures/client2.png" alt="Client">
+                    <img src="client2.png" alt="Client">
                     <br><br>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -50,7 +50,7 @@
             <div class="card">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                    <img src="pictures/client3.png" alt="Client">
+                    <img src="client3.png" alt="Client">
                     <br><br>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
