--- a/editProfile.html
+++ b/editProfile.html
@@ -62,7 +62,9 @@
             <!-- Editable More Info Section -->
             <div class="more-info-editable">
               <label for="more-info-input">More Info:</label>
-              <textarea id="more-info-input" placeholder="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'Lorem Ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."></textarea>
+              <textarea id="more-info-input" placeholder="Our passionate individual brings creativity and dedication to every project. 
+        With a deep love for their work, they consistently strive for excellence 
+        and find joy in overcoming challenges."></textarea>
             </div>
 
            <!-- Editable Contact Section -->
