--- a/.vscode/testimonialsPage.html
+++ b/.vscode/testimonialsPage.html
@@ -145,7 +145,6 @@
         </div>
     </div>
 </div>
-
 <!-- Add Your Feedback -->
 <div class="wrapper">
     <h3>Add Your Freedback</h3>
@@ -160,7 +159,7 @@
         </div>
         <textarea name="opinion" cols="30" rows="5" placeholder="Your opinion..."></textarea>
         <div class="btn-group">
-            <button type="submit" class="btn submit">Submit</button>
+            <button type="submit" class="btn submit" onclick="addTestimonial()">Submit</button>
             <button class="btn cancel">Cancel</button>
         </div>
     </form>
