--- a/reviews.html
+++ b/reviews.html
@@ -39,7 +39,7 @@
       </a>
     </li>
     <li>
-      <a href="analytics.html">
+      <a href="analytic.html">
         <i class="bx bxs-doughnut-chart"></i>
         <span class="text">Analytics</span>
       </a>
@@ -70,7 +70,7 @@
         <li><a href="clients.html">Clients</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="analytics.html">Analytics</a></li>
+        
       </ul>
     </li>
   </ul>
