--- a/reviews.html
+++ b/reviews.html
@@ -59,13 +59,14 @@
     <!-- Pages section with subpages -->
     <li class="has-submenu" id="pages-menu">
       <a href="javascript:void(0);">
+        
         <i class="bx bx-file"></i>
         <span class="text">Pages</span>
         <i class="bx bx-chevron-down"></i>
       </a>
       <ul class="submenu">
         <li><a href="services.html">Services</a></li>
-        <li><a href="reviews.html">Reviews</a></li>
+        <li class="active"><a href="reviews.html">Reviews</a></li>
         <li><a href="appointment.html">Appointment</a></li>
         <li><a href="clients.html">Clients</a></li>
         <li><a href="blog.html">Blog</a></li>
