--- a/analytic.html
+++ b/analytic.html
@@ -8,7 +8,7 @@
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
       rel="stylesheet"/>
-    
+      <script src="https://cdn.jsdelivr.net/npm/mark.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -21,14 +21,13 @@
     <link rel="shortcut icon" type="image/png" href="./img/favicon.ico" />
   </head>
   <body>
-    <!-- SIDEBAR -->
     <section id="sidebar">
       <a href="#" class="brand">
         <i class="fas fa-broom"></i>
         <span class="text">UltraTidy Admin </span>
       </a>
       <ul class="side-menu top">
-        <li >
+        <li>
           <a href="dashboard.html">
             <i class="bx bxs-dashboard"></i>
             <span class="text">Dashboard</span>
@@ -41,7 +40,7 @@
           </a>
         </li>
         <li class="active">
-          <a href="analytics.html">
+          <a href="analytic.html">
             <i class="bx bxs-doughnut-chart"></i>
             <span class="text">Analytics</span>
           </a>
@@ -57,6 +56,23 @@
             <i class="bx bxs-group"></i>
             <span class="text">Team</span>
           </a>
+        </li>
+        <!-- Pages section with subpages -->
+        <li class="has-submenu" id="pages-menu">
+          <a href="javascript:void(0);">
+            <i class="bx bx-file"></i>
+            <span class="text">Pages</span>
+            <i class="bx bx-chevron-down"></i>
+          </a>
+          <ul class="submenu">
+            <li><a href="services.html">Services</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
+            <li><a href="appointment.html">Appointment</a></li>
+            <li><a href="clients.html">Clients</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            
+          </ul>
         </li>
       </ul>
       <ul class="side-menu">
@@ -82,9 +98,9 @@
       <nav>
         <i class="bx bx-menu"></i>
         <a href="services.html" class="nav-link">Categories</a>
-        <form action="#">
+        <form onsubmit="return searchPage()">
           <div class="form-input">
-            <input type="search" placeholder="Search..." />
+            <input type="search" id="searchInput" placeholder="Search..." />
             <button type="submit" class="search-btn">
               <i class="bx bx-search"></i>
             </button>
@@ -92,10 +108,6 @@
         </form>
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
-        <a href="#" class="notification">
-          <i class="bx bxs-bell"></i>
-          <span class="num">8</span>
-        </a>
         <a href="profileInfo.html" class="profile">
           <img src="profile1.jpg" />
         </a>
@@ -125,7 +137,7 @@
   <div class="chart-container">
     <!-- Chart -->
     <div class="canvas-container">
-      <canvas id="cleaningServicesChart" width="400" height="200"></canvas>
+      <canvas id="cleaningServicesChart" width="400" height="400"></canvas>
     </div>
     <!-- End Chart -->
     <!-- Pie Chart -->
