--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
 
     <!-- Boxicons -->
     <link
@@ -20,59 +22,77 @@
   </head>
   <body>
     <!-- SIDEBAR -->
-    <section id="sidebar">
-      <a href="#" class="brand">
-        <i class="fas fa-broom"></i>
-        <span class="text">UltraTidy Admin </span>
+     <!-- SIDEBAR -->
+<section id="sidebar">
+  <a href="#" class="brand">
+    <i class="fas fa-broom"></i>
+    <span class="text">UltraTidy Admin </span>
+  </a>
+  <ul class="side-menu top">
+    <li class="active">
+      <a href="dashboard.html">
+        <i class="bx bxs-dashboard"></i>
+        <span class="text">Dashboard</span>
       </a>
-      <ul class="side-menu top">
-        <li class="active">
-          <a href="dashboard.html">
-            <i class="bx bxs-dashboard"></i>
-            <span class="text">Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a href="payment.html">
-            <i class="bx bxs-shopping-bag-alt"></i>
-            <span class="text">My Store</span>
-          </a>
-        </li>
-        <li>
-          <a href="analytic.html">
-            <i class="bx bxs-doughnut-chart"></i>
-            <span class="text">Analytics</span>
-          </a>
-        </li>
-        <li>
-          <a href="messages.html">
-            <i class="bx bxs-message-dots"></i>
-            <span class="text">Message</span>
-          </a>
-        </li>
-        <li>
-          <a href="team.html">
-            <i class="bx bxs-group"></i>
-            <span class="text">Team</span>
-          </a>
-        </li>
+    </li>
+    <li>
+      <a href="payment.html">
+        <i class="bx bxs-shopping-bag-alt"></i>
+        <span class="text">My Store</span>
+      </a>
+    </li>
+    <li>
+      <a href="analytic.html">
+        <i class="bx bxs-doughnut-chart"></i>
+        <span class="text">Analytics</span>
+      </a>
+    </li>
+    <li>
+      <a href="messages.html">
+        <i class="bx bxs-message-dots"></i>
+        <span class="text">Message</span>
+      </a>
+    </li>
+    <li>
+      <a href="team.html">
+        <i class="bx bxs-group"></i>
+        <span class="text">Team</span>
+      </a>
+    </li>
+    <!-- Pages section with subpages -->
+    <li class="has-submenu" id="pages-menu">
+      <a href="javascript:void(0);">
+        <i class="bx bx-file"></i>
+        <span class="text">Pages</span>
+        <i class="bx bx-chevron-down"></i>
+      </a>
+      <ul class="submenu">
+        <li><a href="services.html">Services</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
+        <li><a href="appointment.html">Appointment</a></li>
+        <li><a href="clients.html">Clients</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        
       </ul>
-      <ul class="side-menu">
-        <li>
-          <a href="settings.html">
-            <i class="bx bxs-cog"></i>
-            <span class="text">Settings</span>
-          </a>
-        </li>
-        <li>
-          <a href="LogIn.html" class="logout">
-            <i class="bx bxs-log-out-circle"></i>
-            <span class="text">Logout</span>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <!-- SIDEBAR -->
+    </li>
+  </ul>
+  <ul class="side-menu">
+    <li>
+      <a href="settings.html">
+        <i class="bx bxs-cog"></i>
+        <span class="text">Settings</span>
+      </a>
+    </li>
+    <li>
+      <a href="LogIn.html" class="logout">
+        <i class="bx bxs-log-out-circle"></i>
+        <span class="text">Logout</span>
+      </a>
+    </li>
+  </ul>
+</section>
+<!-- SIDEBAR -->
 
     <!-- CONTENT -->
     <section id="content">
@@ -80,20 +100,28 @@
       <nav>
         <i class="bx bx-menu"></i>
         <a href="services.html" class="nav-link">Categories</a>
-        <form action="#">
+        <form id="search-form">
           <div class="form-input">
-            <input type="search" placeholder="Search..." />
-            <button type="submit" class="search-btn">
+            <input type="search" id="search-input" placeholder="Search..." />
+            <button type="submit" id="search-btn" class="search-btn">
               <i class="bx bx-search"></i>
             </button>
           </div>
         </form>
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
-        <a href="#" class="notification">
-          <i class="bx bxs-bell"></i>
-          <span class="num">8</span>
-        </a>
+        <div class="notification-icon">
+          <a href="#" class="notification">
+            <i class="bx bxs-bell"></i>
+            <span class="num">0</span>
+          </a>
+          <!-- Notification menu -->
+          <div class="notification-menu" id="notificationMenu">
+            <!-- Content of the notification menu goes here -->
+            <p>New user registered.</p>
+            <p>New appointment scheduled.</p>
+            <p>New message received.</p>
+          </div></div>
         <a href="profileInfo.html" class="profile">
           <img src="profile1.jpg" />
         </a>
@@ -115,44 +143,45 @@
               </li>
             </ul>
           </div>
-          <a href="#" class="btn-download">
-            <i class="bx bxs-cloud-download"></i>
-            <span class="text">Download PDF</span>
-          </a>
-        </div>
-
+        
+         <a href="#" class="btn-download" onclick="downloadPDF()">
+          <i class="bx bxs-cloud-download"></i>
+          <span class="text" id="download-btn">Download PDF</span>
+        </a>
+      </div>
         <ul class="box-info">
           <li>
             <i class="bx bxs-calendar-check"></i>
             <span class="text">
-              <h3>1020</h3>
+              <h3 id="numbers-count">1020</h3>
               <p>New Order</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-group"></i>
             <span class="text">
-              <h3>2834</h3>
+              <h3 id="numbers-count">2834</h3>
               <p>Visitors</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-dollar-circle"></i>
             <span class="text">
-              <h3>N250,043</h3>
+              <h3 id="numbers-count">N250,043</h3>
               <p>Total Sales</p>
             </span>
           </li>
         </ul>
-
-        <div class="table-data">
-          <div class="order">
-            <div class="head">
-              <h3>Recent Orders</h3>
-              <i class="bx bx-search"></i>
-              <i class="bx bx-filter"></i>
-            </div>
-            <table>
+            <div class="table-data">
+              <div class="order">
+                <div class="head">
+                  <h3>Recent Orders</h3>
+                  <div class="actions">
+                    <i class="bx bx-search" id="search-icon"></i>
+                    <i class="bx bx-filter" id="filter-icon"></i>
+                  </div>
+                </div>
+             <table id="order-table">
               <thead>
                 <tr>
                   <th>User</th>
@@ -208,7 +237,6 @@
             <div class="head">
               <h3>Todos</h3>
               <i class="bx bx-plus"></i>
-              <i class="bx bx-filter"></i>
             </div>
             <ul class="todo-list">
               <li class="completed">
